Bug 1514498 - Hide rather than collapse scrollbar thumb when scrollbar is disabled. r=NeilDeakin
Collapsing thumb causes frame of scrollbar to cache an incorrect pref
size, which makes it not able to appear in certain cases.

This patch changes it to use "visibility: hidden" instead so that the
thumb is hidden but still contributes to the width of scrollbar.

An alternative would be also change the code in nsScrollbarFrame to set
something other than collapsed attribute instead, but I'm not sure
whether doing that is any better than just adding a rule. We need the
rule anyway regardless of what we set on the element.

Differential Revision: https://phabricator.services.mozilla.com/D15244

UltraBlame original commit: 15895cfafac18c606afcfac68d89cc4f3653d065

--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -115,6 +115,11 @@ thumb {
   display: -moz-box !important;
 }
 
+
+thumb[collapsed="true"] {
+  visibility: hidden;
+}
+
 scrollbar, scrollbarbutton, scrollcorner, slider, thumb {
   -moz-user-select: none;
 }
